fix footer spacing on mobile

--- a/app/styles/Footer.css
+++ b/app/styles/Footer.css
@@ -6,12 +6,12 @@ footer {
   background-color: var(--accent);
   height: var(--footer-height);
   width: 100%;
-  padding: 0.5rem 0 5rem 0;
+  padding: 0.5rem 0 0.5rem 0;
 }
 
 @media only screen and (max-width: 640px) {
 
   footer { 
-    padding: 0.2rem 0 0.2rem 0;
+    padding: 0.2rem 1rem 0.2rem 0.5rem;
   }
 }
